--- a/components/backend-tests-dotnet-basic-dnilvzyo/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-dotnet-basic-dnilvzyo/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-dotnet-basic-dnilvzyo
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-dotnet-basic-dnilvzyo:772fc9b84714481d762b7b79ed4f23563255d9f3@sha256:a526861f76df5bff675cca5c49ee5938c67f6b570ace4110d9cb8757357387c3
+          name: container-image
